src/test/ui/issues/issue-50781.stderr
error: the trait `X` cannot be made into an object
  --> $DIR/issue-50781.rs:6:5
   |
LL |     fn foo(&self) where Self: Trait;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/issue-50781.rs:1:9
   |
LL | #![deny(where_clauses_object_safety)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #51443 <https://github.com/rust-lang/rust/issues/51443>
   = note: method `foo` references the `Self` type in where clauses

error: aborting due to previous error

